# BasicServer

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp
include/: macro.hpp
src/: Server.cpp  Server.hpp  TcpHandler.cpp  TcpHandler.hpp  TcpSocket.cpp  TcpSocket.hpp  UdpSocket.cpp  UdpSocket.hpp
